server-monitoring/src/app/environment/configure/configuration-settings/configuration-settings.component.scss
.panel-selection {
    display: flex;
    width: 100%;

    .selection-left {
        width: 24rem;
    }

    .selection-right {
        width: calc(100% - 24rem);
        padding: 0rem 1rem;
        height: calc(100vh - 10.6rem);
        overflow: auto;
    }
}


.stepper-content{
    margin: 0;
    padding: 0;
    padding-left: 2rem;
    
    li {
        display: block;
        position: relative;
        padding: 0.75rem 0rem;
        margin-bottom: 0.6rem;
        padding-left: 2rem;

        .text-color-theme {
            color: #8F9191;
            font-weight: 600;
            font-size: 1.125rem;
            line-height: 1.36rem;
        }

        &.active{
            span {
                color: #116173;
            }
            .icon{
                background-color: #116173;
                color: white;
            }
            &::after{
                background-color:  #116173;
            }

        }

        .icon-visited {
            display: none;
        }

        &.stepper-visited {
            .icon-visited {
                display: block;
                position: absolute;
                font-size: 0.75rem;
                padding-top: 0.30rem;
                left: -1rem;
                top: 0.6rem;
                text-align: center;
                width: 1.75rem;
                height: 1.75rem;        
                border-radius: 50%;
                z-index: 0;
            }

            .icon {
                display: none;
            }

            span {
                color: #268144 !important;
            }

            .icon-visited{
                background-color: #268144;
                color: white;
            }

            &::after{
                background-color:  #268144;
            }

        }
        &::after{
            position: absolute;
            content: "";
            left: -0.20rem;
            bottom: -2.35rem;
            height: 100%;
            background-color: #8F9191;
            width: 0.15rem;
        }
        &:last-child{
            &::after{
                display: none;
            }
        }
    
        .icon{
            position: absolute;
            font-size: 0.75rem;
            padding-top: 0.30rem;
            left: -1rem;
            top: 0.6rem;
            text-align: center;
            width: 1.75rem;
            height: 1.75rem;        
            border-radius: 50%;
            background-color: #ccc;
            z-index: 0;
        }

        .data-source-child {
            li {
                &:after {
                    display: none;
                }

                &:last-child {
                    margin-bottom: 0rem;
                }
                span {
                    &:before {
                        content: "";
                        position: absolute;
                        left: -16%;
                        top: 51%;
                        width: 14%;
                        height: 2px;
                        background-color: #8F9191;
                    }

                    &:after {
                        content: "";
                        position: absolute;
                        top: 45%;
                        left: -4%;
                        width: 0.5rem;
                        height: 0.5rem;
                        background-color: #8F9191;
                        border-radius: 50%;
                    }
                }

                .text-color-theme {
                    color: #8F9191;
                }

                &.active {
                    .text-color-theme {
                        color: #116173;
                    }

                    span {
                        &:before , &:after {
                            background-color: #116173;
                        }
                    }
                }

                &.stepper-visited {
                    span {
                        &::after{
                            background-color:  #268144;
                        }

                        &::before {
                            background-color:  #268144;
                        }
                    }
                   
                }
                
            }
        }

    } 
    
    li.item_subcategory {
        margin-bottom: 0rem;
        li {
            color: #344054;

            &.active {
                color: #116173 !important;
            }

            &.stepper-visited {
                .icon-visited {
                    display: block;
                    position: absolute;
                    font-size: 0.75rem;
                    padding-top: 0.30rem;
                    left: -1rem;
                    top: 0.6rem;
                    text-align: center;
                    width: 1.75rem;
                    height: 1.75rem;        
                    border-radius: 50%;
                    z-index: 0;
                }
    
                .icon {
                    display: none;
                }
    
                span {
                    color: #268144 !important;
                }
    
                .icon-visited{
                    background-color: #268144;
                    color: white;
                }
    
                &::after{
                    background-color:  #268144;
                }
    
            }
        }
        
    }
}

.stepper-visited {
    &.stepper-margin-0  {
        margin-bottom: 0rem !important;
    }
}

